src/style.css
#root h1 {
  display: none;
}
#root form {
  display: none;
}
.viewport,
.viewport .clock,
.viewport .buttons,
.viewport .buttons .row,
.viewport .digits,
.viewport .digits .hours,
.viewport .digits .minutes,
.viewport .digits .am-pm,
.viewport .digits .hours .slot,
.viewport .digits .minutes .slot,
.viewport .digits .am-pm .slot {
  display: -webkit-box;
  display: -moz-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: box;
  display: flex;
  -webkit-box-align: center;
  -moz-box-align: center;
  -o-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  -webkit-box-pack: center;
  -moz-box-pack: center;
  -o-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.1s linear;
  -moz-transition: all 0.1s linear;
  -o-transition: all 0.1s linear;
  -ms-transition: all 0.1s linear;
  transition: all 0.1s linear;
}
html,
body {
  height: 100%;
}
html {
  overflow-y: hidden;
}
body {
  overflow-y: auto;
}
body {
  height: 100%, width 100%, linear-gradient(top, #000040, #262626);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  -webkit-background-size: contain;
  -moz-background-size: contain;
  background-size: contain;
  font-size: 20px;
}
.viewport {
  -webkit-box-orient: vertical;
  -moz-box-orient: vertical;
  -o-box-orient: vertical;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}
.viewport .clock {
  -webkit-box-orient: horizontal;
  -moz-box-orient: horizontal;
  -o-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  max-width: 1200px;
  height: 60%;
  margin-top: 30px;
}
.viewport .buttons {
  -webkit-box-orient: vertical;
  -moz-box-orient: vertical;
  -o-box-orient: vertical;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: stretch;
  -moz-box-align: stretch;
  -o-box-align: stretch;
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-box-pack: normal;
  -moz-box-pack: normal;
  -o-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  width: 80%;
  height: 50%;
  margin-top: 20px;
  -webkit-flex-shrink: 2;
  flex-shrink: 2;
}
.viewport .buttons .row {
  -webkit-box-align: stretch;
  -moz-box-align: stretch;
  -o-box-align: stretch;
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-box-pack: distribute;
  -moz-box-pack: distribute;
  -o-box-pack: distribute;
  -ms-flex-pack: distribute;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  height: 50%;
  width: 100%;
}
.viewport .buttons .row button {
  width: 100%;
  height: 100%;
  margin: 10px;
  background-color: #ccc;
  opacity: 0.5;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: alpha(opacity=50);
  border-radius: 15px;
  outline: 0;
  border: 0;
  padding: 0;
  font-size: 35px;
  text-align: center;
}
.viewport .buttons .row button span {
  padding: 0;
  margin: 0;
  text-align: center;
}
.viewport .buttons .row button:hover {
  opacity: 0.7;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
  filter: alpha(opacity=70);
}
.viewport .buttons .row button:active,
.viewport .buttons .row button.toggled {
  opacity: 0.8;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
  filter: alpha(opacity=80);
  background-color: #e6e6e6;
}
.viewport .buttons .row button:disabled {
  opacity: 0.4;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
  filter: alpha(opacity=40);
  background-color: #999;
}
.viewport .digits {
  -webkit-box-orient: horizontal;
  -moz-box-orient: horizontal;
  -o-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: stretch;
  -moz-box-align: stretch;
  -o-box-align: stretch;
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-box-pack: distribute;
  -moz-box-pack: distribute;
  -o-box-pack: distribute;
  -ms-flex-pack: distribute;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  width: 100%;
  height: 80%;
  -webkit-box-flex: 2;
  -moz-box-flex: 2;
  -o-box-flex: 2;
  -ms-box-flex: 2;
  box-flex: 2;
  -webkit-flex-grow: 2;
  flex-grow: 2;
  font-family: 'Courier';
}
.viewport .digits .hours,
.viewport .digits .minutes,
.viewport .digits .am-pm {
  -webkit-box-orient: horizontal;
  -moz-box-orient: horizontal;
  -o-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-align: stretch;
  -moz-box-align: stretch;
  -o-box-align: stretch;
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -moz-box-pack: center;
  -o-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0 10px;
  position: relative;
}
.viewport .digits .hours .slot,
.viewport .digits .minutes .slot,
.viewport .digits .am-pm .slot {
  -webkit-box-orient: vertical;
  -moz-box-orient: vertical;
  -o-box-orient: vertical;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -moz-box-align: center;
  -o-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  -webkit-box-pack: distribute;
  -moz-box-pack: distribute;
  -o-box-pack: distribute;
  -ms-flex-pack: distribute;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  position: relative;
  background-image: -webkit-linear-gradient(top, rgba(255,255,255,0), rgba(179,179,179,0.95), rgba(255,255,255,0));
  background-image: -moz-linear-gradient(top, rgba(255,255,255,0), rgba(179,179,179,0.95), rgba(255,255,255,0));
  background-image: -o-linear-gradient(top, rgba(255,255,255,0), rgba(179,179,179,0.95), rgba(255,255,255,0));
  background-image: -ms-linear-gradient(top, rgba(255,255,255,0), rgba(179,179,179,0.95), rgba(255,255,255,0));
  background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(179,179,179,0.95), rgba(255,255,255,0));
  background-color: transparent;
  width: 100%;
  margin: 0 5px;
  font-size: 200px;
  overflow: hidden;
}
.viewport .digits .hours .slot .strip,
.viewport .digits .minutes .slot .strip,
.viewport .digits .am-pm .slot .strip {
  position: absolute;
  width: 100%;
  text-align: center;
  margin-top: 20px;
  left: 0;
  -webkit-transition: all 0s linear;
  -moz-transition: all 0s linear;
  -o-transition: all 0s linear;
  -ms-transition: all 0s linear;
  transition: all 0s linear;
}
.viewport .digits .hours .slot .strip > div,
.viewport .digits .minutes .slot .strip > div,
.viewport .digits .am-pm .slot .strip > div {
  height: 200%;
}
.viewport .digits .hours .arrow.up,
.viewport .digits .minutes .arrow.up,
.viewport .digits .am-pm .arrow.up {
  position: absolute;
  top: 0;
  width: 100%;
  text-align: center;
  font-size: 45px;
  color: #fff;
  z-index: 5;
  opacity: 0.6;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
  filter: alpha(opacity=60);
  background-color: transparent;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.5s linear;
  -moz-transition: all 0.5s linear;
  -o-transition: all 0.5s linear;
  -ms-transition: all 0.5s linear;
  transition: all 0.5s linear;
}
.viewport .digits .hours .arrow.up:hover,
.viewport .digits .minutes .arrow.up:hover,
.viewport .digits .am-pm .arrow.up:hover {
  opacity: 0.7;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
  filter: alpha(opacity=70);
}
.viewport .digits .hours .arrow.up:active,
.viewport .digits .minutes .arrow.up:active,
.viewport .digits .am-pm .arrow.up:active {
  opacity: 0.8;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
  filter: alpha(opacity=80);
}
.viewport .digits .hours .arrow.down,
.viewport .digits .minutes .arrow.down,
.viewport .digits .am-pm .arrow.down {
  position: absolute;
  bottom: -7px;
  width: 100%;
  text-align: center;
  font-size: 45px;
  color: #fff;
  z-index: 5;
  opacity: 0.6;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
  filter: alpha(opacity=60);
  background-color: transparent;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.5s linear;
  -moz-transition: all 0.5s linear;
  -o-transition: all 0.5s linear;
  -ms-transition: all 0.5s linear;
  transition: all 0.5s linear;
}
.viewport .digits .hours .arrow.down:hover,
.viewport .digits .minutes .arrow.down:hover,
.viewport .digits .am-pm .arrow.down:hover {
  opacity: 0.7;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
  filter: alpha(opacity=70);
}
.viewport .digits .hours .arrow.down:active,
.viewport .digits .minutes .arrow.down:active,
.viewport .digits .am-pm .arrow.down:active {
  opacity: 0.8;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
  filter: alpha(opacity=80);
}
.hidden {
  opacity: 0 !important;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)" !important;
  filter: alpha(opacity=0) !important;
}
.strip.pos-0 {
  top: 0px;
}
.strip.pos-1 {
  top: -231px;
}
.strip.pos-2 {
  top: -462px;
}
.strip.pos-3 {
  top: -693px;
}
.strip.pos-4 {
  top: -924px;
}
.strip.pos-5 {
  top: -1155px;
}
.strip.pos-6 {
  top: -1386px;
}
.strip.pos-7 {
  top: -1617px;
}
.strip.pos-8 {
  top: -1848px;
}
.strip.pos-9 {
  top: -2079px;
}
#alarmTone,
#player {
  position: absolute;
  top: -1000px;
  left: -1000px;
  visibility: hidden;
}
#instructions {
  width: 100%;
  text-align: center;
  padding: 1px;
  margin: 1px;
  color: #b3b3b3;
  opacity: 0.7;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
  filter: alpha(opacity=70);
  font-size: 15px;
}
.intro {
  background-color: rgba(150,150,150,0.4);
  color: #b3b3b3;
  width: 100%;
  max-width: 800px;
  border-radius: 15px;
  padding: 15px;
  margin-bottom: 60px;
  text-align: center;
  font-size: 18px;
}
.intro .title {
  font-weight: bold;
  font-size: 24px;
}
.intro .support,
.intro .supported {
  display: none;
}
.intro .support.not-supported {
  display: static;
  opacity: 1;
  -ms-filter: none;
  filter: none;
}
#copyright {
  margin-top: 25px;
  background-color: transparent;
  font-size: 16px;
  color: #b3b3b3;
  text-align: center;
}
#copyright div {
  margin-bottom: 10px;
}
#copyright a,
#copyright a:link {
  color: #808080;
  text-decoration: none;
  border-bottom: 1px solid #808080;
  padding-bottom: 2px;
}
#copyright a:active {
  color: #b3b3b3;
}
#copyright a:hover {
  color: #b3b3b3;
  border-bottom: 1px solid #b3b3b3;
  padding-bottom: 4px;
}
input[type=checkbox] {
/* Double-sized Checkboxes */
  ms-transform: scale(2); /* IE */
  moz-transform: scale(2); /* FF */
  webkit-transform: scale(2); /* Safari and Chrome */
  o-transform: scale(2); /* Opera */
  -webkit-transform: scale(2);
  -moz-transform: scale(2);
  -o-transform: scale(2);
  -ms-transform: scale(2);
  transform: scale(2);
  padding: 10px;
}

